<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Refab</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_sample">Select sample</string>
    <string name="action_use_default_sample">Default sample</string>
    <string name="setting_sample_16">16 bursts</string>
    <string name="setting_sample_7">7 bursts</string>
    <string name="setting_select_sample">Select sample</string>
    <string name="action_audio_setting">Audio settings</string>
    <string name="play_and_record">Play and record</string>
    <string name="play">Play</string>
    <string name="plot">Plot</string>
    <string name="timer">Timer</string>
    <string name="calculate">Calculate</string>
    <string name="status_view">Press the rec and play button to record.</string>
    <string name="nburst">#Bursts: N/A</string>
    <string name="title_activity_main">Refab - main menu</string>
    <string name="title_activity_measure">Refab - Measurement</string>
    <string name="title_activity_list_files">Refab - Recorded Files</string>
    <string name="title_activity_run_main">RunMainActivity</string>
    <string name="measure_desc">Measurement button for execution.</string>
    <string name="wait_desc">State of measurement.</string>
    <string name="done_desc">Mesurement successfuly finished.</string>
    <string name="source_name">Source:</string>
    <string name="source_mic">Microphone</string>
    <string name="source_voice_rec">Voice Recognition</string>
    <string name="view_status">Status:</string>
    <string name="state_idle">Idle&#8230;</string>
    <string name="state_processing">Processing&#8230;</string>
    <string name="state_recording">Recording&#8230;</string>
    <string name="state_stopped">Stopped&#8230;</string>
    <string name="state_done">Done&#8230;</string>
</resources>